--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+The goal of this project is to expand the Latex code to add several functionality such as scene counting, props needed by scenes, etc... 
+This goes beyond the intended intention of the author (see original readme)
+
+ORIGINAL README :
 LaTeX2e class to provide formatting for Draft Screenplays as
 recommended by the Academy of Motion Picture Arts and Sciences.
 
